--- a/simple-faq-master/style.css
+++ b/simple-faq-master/style.css
@@ -7,19 +7,22 @@ body {
 header {
   background-color: #ffffff;
   text-align: center;
+  margin: 4.5rem auto;
 }
 
 main {
   background-color: #f8fafc;
 }
-section,
-hr {
-  width: 50%;
+section {
+  width: 65%;
   margin: auto;
 }
 
 hr {
-  border: 1px solid #6e6f70;
+  border: 1px solid rgba(110, 111, 112, 0.1);
+  width: 70%;
+  margin: auto;
+  margin-bottom: -2rem;
 }
 
 h1,
@@ -33,9 +36,30 @@ h1 {
 
 h2 {
   font-size: 1.5rem;
+  padding-top: 4rem;
 }
 
 p {
   font-weight: 400;
   font-size: 1rem;
+}
+
+a {
+  color: #4e80ee;
+}
+.text1 {
+  padding: 1.8rem 0;
+}
+
+.ordenada {
+  list-style-type: decimal;
+  list-style-position: inside;
+  line-height: 2;
+}
+
+.desordenada {
+  list-style-type: disc;
+  list-style-position: outside;
+  line-height: 2;
+  padding-left: 1.7rem;
 }
